Flowmini/flowmini_v23_token_tree_parser_bridge/examples/fail/bad_shadowing.flow
program bad_shadowing

main {
    person : int(30)

    while person > 0 {
        person : int(12)
        print person
    }
}
